# awesome-lectures

./: .gitignore  README.md  netlify.toml  schema.json
backend/: .env.example  app.py  config.py  db.py  github_api.py  lectures.db  migrate_remove_seen.sql  pyproject.toml  schema.sql
backend/routes/: admin.py  interactions.py  ratings.py  suggestions.py
backend/templates/: admin.html  admin_unauthorized.html
data/: ai-impact-education.json  cognitive-tools-for-making-the-invisible-visible.json  cosmology-lecture-1.json  embodied-intelligence-mission.json  four-big-ideas-from-carnegie-study.json  from-haptic-illusions-to-beyond-real-interactions-in-vr.json  hardware-software-codesign-1.json  how-to-speak.json  i-learn-therefore-i-buy.json  interactive-media-for-healthcare-professionals.json  introduction-human-behavioral-biology.json  language.json  learning-and-memory.json  learning-math-through-play.json  learning-through-designing-tabletop-games.json  lifelong-kindergarten.json  magic-the-gathering-20-years-20-lessons-learned.json  mapping-learning-to-game-mechanics.json  neural-circuit-mechanisms-of-cognition.json  practice-of-art-8-.json  practice-of-art-8-1.json  problem-with-video-games-and-learning.json  reinforcement-learning-fast-and-slow.json  sculpting-behavior.json  teaching-by-the-case-method.json  teaching-for-learning.json  technology-to-rethink-how-we-learn.json  textbooks-handouts-other-materials.json  what-should-ai-do-for-learning.json  whats-up-with-ai.json
deploy/: DEPLOY.md  al-backend.service  setup.sh  update.sh
doc/: hemingway.md
(+75 files in other folders)
