[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "flask>=3.1",
  "flask-cors>=5.0",
  "flask-limiter>=3.5",
  "gunicorn>=23.0",
  "python-dotenv>=1.2.2",
  "requests>=2.32",
]

[project.scripts]
serve = "app:create_app"
